[crossvista team] [crossvista team] Commit file: CRM-BDM/releases.json

--- a/CRM-BDM/releases.json
+++ b/CRM-BDM/releases.json
@@ -3,7 +3,6 @@
     "name" : "rel-000-000",
     "type" : "baseline",
     "author" : "Administrator",
-    "date" : 1516047010926,
-    "hidden" : true
+    "date" : 1516047010926
   }
 ]
